--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           command: |
             sudo apt-get update
             sudo apt-get install -y python3
-            python3 -m test.pyname: "Say hello"
+            python3 -m test
 
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
